Fixed images, trying and failing to align stuff.

--- a/app/src/_scss/_Base.scss
+++ b/app/src/_scss/_Base.scss
@@ -4,8 +4,14 @@
     font-family: Poppins;
     overscroll-behavior: none;
 }
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    padding: 0;
+    margin: 0;
+}
+
 .row {
-    margin-top: 0;
+    margin: 0;
 }
 
 .main-layout {
