--- a/app/src/_scss/App.css
+++ b/app/src/_scss/App.css
@@ -35,8 +35,13 @@
       overscroll-behavior: none;
 }
 
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  padding: 0;
+  margin: 0;
+}
+
 .row {
-  margin-top: 0;
+  margin: 0;
 }
 
 .main-layout {
@@ -101,7 +106,11 @@ section {
   color: #616365;
 }
 
-.background-light-gray {
+.bg-brown {
+  background-color: #75695C;
+}
+
+.bg-light-gray {
   background-color: var(--color-light-gray);
 }
 
@@ -109,8 +118,12 @@ section {
   background-color: var(--color-gray);
 }
 
-.background-dark-gray {
+.bg-dark-gray {
   background-color: var(--color-dark-gray);
+}
+
+.bg-gray {
+  background-color: var(--color-gray);
 }
 
 .background-white {
@@ -119,31 +132,6 @@ section {
 
 .background-dark {
   background-color: var(--color-dark);
-}
-
-.background-model3 {
-  background-image: url("../img/3.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.background-model4 {
-  background-image: url("../img/4.png");
-  background-size: cover;
-  background-position: right;
-}
-
-.background-model5 {
-  background-image: url("../img/5.png");
-  background-position: right;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.background-model6 {
-  background-image: url("../img/6.png");
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .background-customer-support {
@@ -165,6 +153,44 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 22px;
+}
+
+.bg-model {
+  background-repeat: no-repeat;
+}
+.bg-model.model3 {
+  background-image: url("../img/3.png");
+  background-position: right;
+  background-color: #CAC0BE;
+}
+.bg-model.model4 {
+  background-image: url("../img/4.png");
+  background-position: right;
+  background-color: #E9E9E9;
+}
+.bg-model.model5 {
+  background-image: url("../img/5.png");
+  background-position: left;
+  background-color: #75695C;
+}
+.bg-model.model6 {
+  background-image: url("../img/6.png");
+  background-position: right;
+  background-color: #D9D9D9;
+}
+.bg-model.model7 {
+  background-image: url("../img/7.png");
+  background-size: cover;
+  width: 825px;
+}
+.bg-model.model8 {
+  background-image: url("../img/8.png");
+  background-size: cover;
+  width: 825px;
+}
+.bg-model.model9 {
+  background-image: url("../img/9.png");
+  background-size: cover;
 }
 
 .height-60 {
@@ -199,16 +225,20 @@ section {
   width: 60px !important;
 }
 
-.width-490 {
-  width: 490px;
-}
-
 .width-635 {
   width: 635px;
 }
 
+.width-490 {
+  width: 490px;
+}
+
 .width-255 {
   width: 255px;
+}
+
+.w-540 {
+  width: 540px;
 }
 
 .width-50p {
@@ -221,6 +251,16 @@ section {
 
 .max-width-342 {
   max-width: 342px;
+}
+
+.max-width-400 {
+  max-width: 425px;
+}
+
+.w-fit-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .mb-80 {
@@ -358,6 +398,9 @@ nav .main-layout {
   justify-content: space-between;
   align-items: center;
   text-align: center;
+}
+nav :last-of-type(div) {
+  justify-content: right;
 }
 nav.top {
   background-color: transparent;
