--- a/app/src/_scss/_Base.scss
+++ b/app/src/_scss/_Base.scss
@@ -78,3 +78,10 @@ section {
     text-align: center;
 
 }
+
+.line {
+    margin-top: 65px;
+    margin-bottom: 65px;
+    background-color: #616365;
+    height: 1px;
+}
