--- a/app/src/_scss/components/_SpecialtyButton.scss
+++ b/app/src/_scss/components/_SpecialtyButton.scss
@@ -1,4 +1,5 @@
 .button-specialty {
+
     background-color: var(--color-dark-gray);
     width: 490px;
     height: 232px;
@@ -11,14 +12,11 @@
     text-align: left;
 
     > div {
-        width: 50%;
-    }
-
-    &::before {
-        content: ' ';
+        display: flex;
+        flex-direction: column;
         position: absolute;
-        display: inline-block;
-        background-color: var(--color-white);
+        background-color: #FFFFFFAA;
+        height: 100%;
         top: 0;
         bottom: 0;        
         left: 0;
@@ -27,14 +25,14 @@
         pointer-events: none;
         transition: all 0.1s ease;
     }
-
+    
     &:hover {
 
         box-shadow: 0px 0px 5px #23262A;
 
-        &::before {
-            opacity: 50%;
-            width: 100%;
+        > div {
+                 width: 100%;
+
         }
 
     }
@@ -43,10 +41,12 @@
         scale: 105%;
     }
 
-    * {
-        margin-left: 34px;
-        margin-right: 34px;
-        pointer-events: none;
-    }
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+    
+    &:nth-of-type(1) { background-image: url("../img/specialty1.png");}
+    &:nth-of-type(2) { background-image: url("../img/specialty2.png");}
+    &:nth-of-type(3) { background-image: url("../img/specialty3.png");}
 
 }
