--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -2,12 +2,14 @@
 @use "_Base";
 @use "_Utility";
 
+//Components
 @use "components/_Badge";
 @use "components/_NavBar";
 @use "components/_Footer";
 @use "components/_ProductGrid";
 @use "components/_Rating";
 
+//Buttons
 @use "components/_ActionButton";
 @use "components/_IconButton";
 @use "components/_ProductButton";
@@ -15,13 +17,16 @@
 @use "components/_SaleButton";
 @use "components/_InfoBox";
 
+//Sections
 // @use "sections/_ProductSection";
 @use "sections/_BreadcrumbSection";
 @use "sections/_ContactSection";
 @use "sections/_MapSection";
 @use "sections/_Section0";
+@use "sections/_ShoppingCart";
 // @use "sections/_Section2";
 // @use "sections/_Section3";
 
+//Views
 @use "views/_MainView";
 @use "views/_ContactView";
