Fixed a whole bunch of small viewport stuff.

--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -22,7 +22,7 @@
 @use "sections/_BreadcrumbSection";
 @use "sections/_ContactSection";
 @use "sections/_MapSection";
-@use "sections/_Section0";
+@use "sections/_Sale50Section";
 @use "sections/_ShoppingCart";
 // @use "sections/_Section2";
 // @use "sections/_Section3";
