--- a/app/src/_scss/_Base.scss
+++ b/app/src/_scss/_Base.scss
@@ -73,8 +73,8 @@ p {
 
 section {
 
-    margin-top: 44px;
-    margin-bottom: 44px;
+    margin-top: 65px !important;
+    margin-bottom: 65px !important;
     text-align: center;
 
 }
