--- a/app/src/_scss/App.css
+++ b/app/src/_scss/App.css
@@ -93,8 +93,8 @@ p {
 }
 
 section {
-  margin-top: 44px;
-  margin-bottom: 44px;
+  margin-top: 65px !important;
+  margin-bottom: 65px !important;
   text-align: center;
 }
 
@@ -429,11 +429,11 @@ nav a:not(.logo), nav button {
 nav a {
   font-weight: bold;
 }
-nav .fa-shopping-bag {
+nav .sidebar {
   position: relative;
   top: -18px;
 }
-nav .fa-shopping-bag::after {
+nav .sidebar::after {
   top: -6px;
   padding-top: 2px;
 }
@@ -443,16 +443,17 @@ nav .container {
 nav .container:last-child {
   text-align: end;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 991px) {
   nav {
-    padding: 0 !important;
     margin-top: 0;
     max-width: 100vw !important;
     align-items: start;
-    margin: 0;
   }
   nav .button-icon {
     margin-right: 22px;
+  }
+  nav .sidebar {
+    top: 0;
   }
 }
 
@@ -902,65 +903,163 @@ button.action.white::after {
 }
 
 .showcase {
-  height: 946px;
+  padding: 0;
+  height: 884px;
+}
+.showcase img:nth-of-type(1) {
   position: absolute;
   left: 0;
+  z-index: -10;
+  margin: 0;
+}
+.showcase img:nth-of-type(2) {
+  position: absolute;
   right: 0;
-  top: 0;
   z-index: -10;
 }
+.showcase div {
+  position: absolute;
+  top: 250px;
+  text-align: center;
+  left: calc(50% - 233px);
+  height: 100%;
+  transition: all 1s ease;
+}
+@media only screen and (max-width: 1560px) {
+  .showcase img:nth-of-type(2) {
+    display: none;
+  }
+  .showcase img:nth-of-type(1) {
+    opacity: 75%;
+    position: static;
+  }
+}
 
-.showcase-content {
-  height: 946px;
-  width: 100%;
+#shopping-cart {
+  width: 500px;
+}
+#shopping-cart .btn-close {
+  position: absolute;
+  right: 22px;
+  top: 22px;
+}
+#shopping-cart .offcanvas-body {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+#shopping-cart .offcanvas-header {
+  padding-bottom: 0;
+}
+#shopping-cart .total-price {
   position: relative;
-  z-index: 0;
-  justify-content: center;
-  align-items: center;
+  margin-top: 6px;
+  height: 64px;
+}
+#shopping-cart .total-price b {
+  position: absolute;
+  right: 22px;
+}
+#shopping-cart .checkout {
+  position: absolute;
+  right: 22px;
+  top: 32px;
+  padding: 6px 12px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: rgba(32, 32, 32, 0.1254901961);
+}
+#shopping-cart button {
+  padding: 0px;
+  height: 25px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: all 0.1s ease;
+}
+#shopping-cart button:hover {
+  background-color: #aaaaaa;
+}
+#shopping-cart button:active {
+  background-color: gray;
+}
+#shopping-cart .shopping-cart-item {
+  display: flex;
+}
+#shopping-cart .shopping-cart-item:hover {
+  background-color: rgba(32, 32, 32, 0.1254901961);
+}
+#shopping-cart .shopping-cart-item img {
+  width: 52px;
+  margin-right: 22px;
+  margin-left: 22px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+#shopping-cart .shopping-cart-item .quantity {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
-.showcase-content div {
-  margin-top: 300px;
+#shopping-cart .shopping-cart-item .quantity span {
+  padding-left: 6px;
+  padding-right: 6px;
+  min-height: 100px;
+  border: 1px solid rgba(32, 32, 32, 0.1254901961);
+  border-left: 0;
+  border-right: 0;
+}
+#shopping-cart .shopping-cart-item .quantity button {
+  background-color: rgba(0, 0, 0, 0.062745098);
+  width: 25px;
+}
+#shopping-cart .shopping-cart-item .quantity button:nth-of-type(1) {
+  border-radius: 5px 0 0 5px;
+  border: 1px solid rgba(32, 32, 32, 0.1254901961);
+}
+#shopping-cart .shopping-cart-item .quantity button:nth-of-type(2) {
+  border-radius: 0 5px 5px 0;
+  border: 1px solid rgba(32, 32, 32, 0.1254901961);
+}
+#shopping-cart .shopping-cart-item .price {
+  text-align: right;
+  margin-right: 22px;
+}
+#shopping-cart .nav div {
+  width: 100%;
   text-align: center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  display: flex;
 }
-.showcase-content::before {
-  content: " ";
-  position: absolute;
-  left: 0;
-  bottom: 44px;
-  display: inline-block;
-  background-image: url("../img/1.png");
-  background-repeat: no-repeat;
-  background-position: left;
-  width: 100%;
-  height: 1048px;
-  z-index: -1;
-  pointer-events: none;
+#shopping-cart .nav a {
+  height: 28px;
+  text-align: center;
 }
-.showcase-content::after {
-  content: " ";
-  position: absolute;
-  right: 0;
-  bottom: 44px;
-  display: inline-block;
-  background-image: url("../img/2.png");
-  background-repeat: no-repeat;
-  background-position: right;
-  width: 100%;
-  height: 1048px;
-  z-index: -1;
-  overflow-x: hidden;
-  pointer-events: none;
+#shopping-cart .nav a:hover {
+  background-color: gray;
+}
+#shopping-cart .nav p {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+#shopping-cart .nav p:after {
+  top: 0;
+  right: -16px;
 }
 
-#shopping-cart {
-  width: 500px;
+.scrollable {
+  overflow-y: auto;
 }
 
 h1 {
