--- a/app/src/_scss/_Base.scss
+++ b/app/src/_scss/_Base.scss
@@ -5,6 +5,18 @@
     overscroll-behavior: none;
 }
 
+@media only screen and (max-width: 1200px) {
+    
+    .container, .container > * {
+        justify-content: space-evenly !important;
+    }
+
+    h5 {
+        text-align: center;
+    }
+
+}
+
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     padding: 0;
     margin: 0;
