Fixed categories and products views.
- Fixed CategoriesView.
- Fixed ProductsView.
- Fixed IconButtons alignment in header.
- Made product buttons a lot nicer.

--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -8,6 +8,7 @@
 @use "components/_Footer";
 @use "components/_ProductGrid";
 @use "components/_Rating";
+@use "components/_InfoBox";
 
 //Buttons
 @use "components/_ActionButton";
@@ -15,7 +16,7 @@
 @use "components/_ProductButton";
 @use "components/_SpecialtyButton";
 @use "components/_SaleButton";
-@use "components/_InfoBox";
+@use "components/_categoryButton";
 
 //Sections
 // @use "sections/_ProductSection";
