--- a/app/src/_scss/App.css
+++ b/app/src/_scss/App.css
@@ -409,6 +409,7 @@ nav {
   padding-right: 22px;
   background-color: var(--color-white);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 10;
   transition: all 0.2s ease-out;
 }
 nav .main-layout {
@@ -544,8 +545,32 @@ footer .fa-linkedin:hover {
   margin: 0;
   padding: 0;
   flex-grow: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
+.info-box {
+  width: 255px;
+  padding: 0;
+  text-align: center;
+  position: relative;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.info-box > div {
+  width: 60px !important;
+  height: 60px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+.info-box h5 {
+  margin: 33px;
+  white-space: pre;
+}
 button.action {
   color: white;
   text-transform: uppercase;
@@ -652,11 +677,6 @@ button.action.white::after {
   text-align: start;
   position: relative;
   padding: 0;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
   transition: all 0.1s ease;
 }
 .button-product img {
@@ -670,6 +690,10 @@ button.action.white::after {
      object-position: center;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .button-product > p > :first-of-type {
   margin-top: 8px;
@@ -685,16 +709,14 @@ button.action.white::after {
   height: 210px;
   background-color: rgba(112, 112, 112, 0.6666666667);
   opacity: 0;
-  transition: all 0.1s ease;
-}
-.button-product:hover {
-  box-shadow: 0px 0px 5px #23262A;
+  transition: all 0.25s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .button-product:hover .hover-box {
   opacity: 1;
-}
-.button-product:active {
-  scale: 105%;
 }
 .button-product > div > a > button {
   position: absolute;
@@ -809,26 +831,37 @@ button.action.white::after {
   align-self: center;
 }
 
-.info-box {
-  width: 255px;
-  padding: 0;
-  text-align: center;
+.button-category {
   position: relative;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: center;
+  transition: all 0.1s ease;
 }
-.info-box > div {
-  width: 60px !important;
-  height: 60px !important;
-  margin-left: auto;
-  margin-right: auto;
+.button-category p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: rgba(32, 32, 32, 0.6666666667);
+  color: white;
+  padding: 6px;
 }
-.info-box h5 {
-  margin: 33px;
-  white-space: pre;
+.button-category:hover {
+  box-shadow: 0px 0px 5px #23262A;
 }
+.button-category:active {
+  scale: 105%;
+}
+
+.items-w-fit-content > * {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .breadcrumb ul {
   text-align: start;
 }
@@ -950,6 +983,7 @@ button.action.white::after {
   position: absolute;
   right: 22px;
   top: 22px;
+  width: 22px;
 }
 #shopping-cart .offcanvas-body {
   padding: 0;
@@ -989,13 +1023,14 @@ button.action.white::after {
   width: fit-content;
   border-radius: 5px;
   background-color: transparent;
+  padding: 6px;
   transition: all 0.1s ease;
 }
 #shopping-cart button:hover {
-  background-color: #aaaaaa;
+  background-color: #aaaaaa !important;
 }
 #shopping-cart button:active {
-  background-color: gray;
+  background-color: gray !important;
 }
 #shopping-cart .shopping-cart-item {
   display: flex;
@@ -1030,6 +1065,7 @@ button.action.white::after {
 #shopping-cart .shopping-cart-item .quantity button {
   background-color: rgba(0, 0, 0, 0.062745098);
   width: 25px;
+  padding: 0;
 }
 #shopping-cart .shopping-cart-item .quantity button:nth-of-type(1) {
   border-radius: 5px 0 0 5px;
