--- a/app/src/_scss/components/_NavBar.scss
+++ b/app/src/_scss/components/_NavBar.scss
@@ -8,6 +8,7 @@ nav {
     padding-right: 22px;
     background-color: var(--color-white);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 10;
     transition: all 0.2s ease-out;
 
     .main-layout {
@@ -60,11 +61,9 @@ nav {
     }
     
     @media only screen and (max-width: 991px)  {
-        // padding: 0 !important;
         margin-top: 0;
         max-width: 100vw !important;
         align-items: start;
-        // margin: 0;
 
         .button-icon {
             margin-right: 22px;
