--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -24,10 +24,11 @@
 @use "sections/_ContactSection";
 @use "sections/_MapSection";
 @use "sections/_Sale50Section";
-@use "sections/_ShoppingCart";
 // @use "sections/_Section2";
 // @use "sections/_Section3";
 
 //Views
 @use "views/_MainView";
 @use "views/_ContactView";
+@use "views/_ShoppingCart";
+@use "views/_Wishlist";
