--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -9,6 +9,7 @@
 @use "components/_ProductGrid";
 @use "components/_Rating";
 @use "components/_InfoBox";
+@use "components/_UpDown";
 
 //Buttons
 @use "components/_ActionButton";
@@ -31,4 +32,3 @@
 @use "views/_MainView";
 @use "views/_ContactView";
 @use "views/_ShoppingCart";
-@use "views/_Wishlist";
