--- a/app/src/_scss/_Utility.scss
+++ b/app/src/_scss/_Utility.scss
@@ -123,6 +123,7 @@
 .width-490 { width: 490px; }
 .width-255 { width: 255px; }
 .w-540 { width: 540px; }
+.w-160 { width: 160px;}
 
 .width-50p { width: 50%; }
 .width-100p { width: 100%; }
