--- a/app/src/_scss/views/_ShoppingCart.scss
+++ b/app/src/_scss/views/_ShoppingCart.scss
@@ -41,7 +41,7 @@
         background-color: #20202020;
     }
     
-    button {
+    .remove-button {
 
         padding: 0px;
         height: 25px;
@@ -84,38 +84,6 @@
 
         .item-info {
             align-self: center;
-        }
-
-        .quantity {
-            width: fit-content;        
-            user-select: none;
-            margin-bottom: 6px;
-
-            span {
-                padding-left: 6px;
-                padding-right: 6px;
-                min-height: 100px;
-                border: 1px solid #20202020;
-                border-left: 0;
-                border-right: 0;
-            }
-            
-            button {
-                background-color: #00000010;
-                width: 25px;
-                padding: 0;
-            }
-
-            button:nth-of-type(1) {
-                border-radius: 5px 0 0 5px;
-                border: 1px solid #20202020;
-            }
-
-            button:nth-of-type(2) {
-                border-radius: 0 5px 5px 0;
-                border: 1px solid #20202020;
-            }
-
         }
 
         .price {
