--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -10,6 +10,8 @@
 @use "components/_Rating";
 @use "components/_InfoBox";
 @use "components/_UpDown";
+@use "components/_TabControl";
+@use "components/_Toggle";
 
 //Buttons
 @use "components/_ActionButton";
