--- a/app/src/_scss/components/_UpDown.scss
+++ b/app/src/_scss/components/_UpDown.scss
@@ -3,6 +3,8 @@
     width: fit-content;        
     user-select: none;
     margin-bottom: 6px;
+    padding-left: 0;
+    padding-right: 0;
 
     span {
         padding-left: 6px;
